separate out problem validation instructions

--- a/workshop/workshop.yaml
+++ b/workshop/workshop.yaml
@@ -4,6 +4,7 @@ modules:
   activate:
   - workshop-overview
   - preface
+  - problem-validation
   - exercises/01-problem
   - validate
   - workshop-summary
